--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
     <a [routerLink]="['/first-task']">Первая задача</a>
     <a [routerLink]="['/second-task']">Вторая задача</a>
-    <a>Третья задача</a>
+    <a [routerLink]="['/third-task']">Третья задача</a>
     <a>Четвертая задача</a>
     <a>Пятая задача</a>
 </nav>
