--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <a [routerLink]="['/first-task']">Первая задача</a>
     <a [routerLink]="['/second-task']">Вторая задача</a>
     <a [routerLink]="['/third-task']">Третья задача</a>
-    <a>Четвертая задача</a>
+    <a [routerLink]="['/fourth-task']">Четвертая задача</a>
     <a>Пятая задача</a>
 </nav>
 <router-outlet></router-outlet>
