--- a/src/app/pages/first-task/first-task.component.html
+++ b/src/app/pages/first-task/first-task.component.html
@@ -1,4 +1,5 @@
 <p>{{title}}</p>
+<p>Откройте инструмент разработчика нажав клавишк f12</p>
 <input type="number" [(ngModel)]="value" (keyup.enter)="addNode()">
 <button (click)="addNode()">Добавить узел</button>
 <button (click)="walkWidth()">Поиск в ширину</button>
