add test first task

--- a/src/app/pages/first-task/first-task.component.html
+++ b/src/app/pages/first-task/first-task.component.html
@@ -4,3 +4,4 @@
 <button (click)="addNode()">Добавить узел</button>
 <button (click)="walkWidth()">Поиск в ширину</button>
 <button (click)="walkInDepth()">Поиск в глубину</button>
+<button (click)="countNode()">Узнать количество узлов</button>
