--- a/src/app/pages/first-task/first-task.component.html
+++ b/src/app/pages/first-task/first-task.component.html
@@ -5,3 +5,4 @@
 <button (click)="walkWidth()">Поиск в ширину</button>
 <button (click)="walkInDepth()">Поиск в глубину</button>
 <button (click)="countNode()">Узнать количество узлов</button>
+<button (click)="viewTree()">обзор дерева</button>
