--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+
+a {
+    padding: 10px 15px;
+    border-radius: 6px 6px 0 0;
+    box-shadow: 1px -2.5px 3px #a0a0a0;
+    background-color: #fff;
+    margin-right: 1px;
+    color: black;
+    text-decoration: none;
+}
+
+.active {
+    position: relative;
+    top: -10px;
+    padding-bottom: 20px;
+    box-shadow: inset 10px 11px gold;
+}
+
+nav {
+    margin-bottom: 50px;
+}
+
+body {
+    // background-color: #dddddd;
+    max-width: 80%;
+    margin: 0 auto;
+    font-family: Arial, sans-serif;
+}
