--- a/src/app/pages/fifth-task/fifth-task.component.html
+++ b/src/app/pages/fifth-task/fifth-task.component.html
@@ -1,5 +1,5 @@
 <p>Даны два массива длины L, в ячейках которых может быть 0 или 1. Нужно заполнить эти массивы, учитывая, что первом массиве сумма значений в ячейках – N, во втором – M. Суммы значений в соответствующих ячейках обоих массивов s1, s2, ..., sL.
 </p>
-<p>Для этой задачи есть следующие мысли <br> функция принимающая сумму значений масиива, вфункции цикл while с проверкой условия превышает ли текущая сумма масива заданную в теле цикла генерирую 0 либо 1, с помощью Math.random() и условия x > 0,5. Сгенерированное
-    число пушим в массив.
+<p>Для этой задачи есть следующие мысли <br> функция принимающая сумму значений массива, в функции цикл while с проверкой условия превышает ли текущая сумма масива заданную условием, в теле цикла генерирую 0 либо 1, с помощью Math.random() и условия x >
+    0,5. Сгенерированное число пушим в массив.
 </p>
