--- a/src/app/pages/fourth-task/fourth-task.component.html
+++ b/src/app/pages/fourth-task/fourth-task.component.html
@@ -1,4 +1,4 @@
 <p>{{title}}</p>
-<p>Откройте инструмент разработчика нажав клавишк f12</p>
+<p>Откройте инструмент разработчика нажав клавишу f12</p>
 <input type="text" placeholder=" ( { 1 + 3 } [ 4 + < 3 - 5 > ] ) " [(ngModel)]="value" (keyup.enter)="balance(this.value)">
 <button (click)=" balance(this.value)">Проверить</button>
